# curasphere-backend

./: .flake8  .gitignore  alembic.ini  commands.md  pyproject.toml
migrations/: env.py
migrations/versions/: 167ab72e608d_edit_tableee.py  31f0fc547ca3_add_doctor_status.py  34c3dea3b0bc_initial_migration.py  47d69b743f20_modified_appointment_status_2.py  4965c6cfb62a_message3343.py  521623d90454_add_ehr_status_enum.py  b4b799c2ba6c_message33435.py  b62d230748bc_create_tables.py  bed9fa819f5d_edit_tablee.py  d8f0ea0b1858_message333.py  e20e698d08a4_modified_appointment_status.py  e47d364d446d_edit_table.py  f860f0f16ab4_modify_appointment_status_enum.py
src/: database.py  main.py
src/api/: __init__.py  base_model.py  deps.py  rbac.py  uni_enum.py
src/api/appointment/: model.py  repository.py  router.py  schema.py  service.py
src/api/auth/: __init__.py  router.py  schemas.py  service.py
src/api/ehr/: model.py  repository.py  router.py  schema.py  service.py
src/api/sse/: service.py
src/api/user/: __init__.py  dependency.py  models.py  router.py  schema.py  service.py
src/core/: __init__.py  config.py  database.py  email_config.py
