[tool.black]
line-length = 78
target-version = ['py37']
[project]
name = "curasphere-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Righteousness Akinbola",email = "righteousnessakinbola@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "click (==8.1.8)",
    "fastapi (==0.115.8)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pydantic-core (==2.27.2)",
    "sniffio (==1.3.1)",
    "starlette (==0.45.3)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.34.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false