[tool.poetry]
name = "curasphere-backend"
version = "0.1.0"
description = ""
authors = [
    "Righteousness Akinbola <righteousnessakinbola@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
annotated-types = "0.7.0"
anyio = "4.8.0"
click = "8.1.8"
fastapi = "0.115.8"
h11 = "0.14.0"
idna = "3.10"
pydantic = { version = ">=2.10.6,<3.0.0", extras = ["email"] }
pydantic-core = "2.27.2"
sniffio = "1.3.1"
starlette = "0.45.3"
typing-extensions = "4.12.2"
uvicorn = "0.34.0"
sqlmodel = ">=0.0.22,<0.0.23"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic-settings = ">=2.7.1,<3.0.0"
black = ">=25.1.0,<26.0.0"
passlib = ">=1.7.4,<2.0.0"
pyjwt = ">=2.10.1,<3.0.0"
fastapi-mail = ">=1.4.2,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
sse-starlette = ">=2.2.1,<3.0.0"
alembic = ">=1.15.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78
target-version = ['py37']
